# CryptDesk

./: .gitignore  README.md  SECURITY.md  pyproject.toml
.github/workflows/: github-pages.yml  github-release.yml  python-package.yml  python-publish.yml
cryptdesk/: __init__.py  __main__.py  app.py  control.py  crypto.py  network.py  protocol.py  screen.py
cryptdesk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: build.ps1
site/: index.html  sitemap.xml  styles.css
tests/: test_crypto.py
